syntax = "proto3";

message Problem {
    string id = 1;
    string title = 2;
    string description = 3;
}

// service for calling API
service ProblemService {
    rpc GetAllProblems (Empty) returns (ProblemList) {}
    rpc UpdateProblem (Problem) returns (Problem) {}
}

message Empty {}

// this is an array of problems
message ProblemList {
    repeated Problem problems = 1; // its an array of problems. problems is list
}